--- a/rebar.config
+++ b/rebar.config
@@ -3,7 +3,7 @@
 %% Erlang compiler options
 {erl_opts, [debug_info, fail_on_warning
             , {i, "./priv/"}
-            , {i, "../gmt-util/include/"}
+            , {i, "../gmt/include/"}
            ]}.
 
 %% EUnit options
