hibari >> GH19 - Introduce Basho Lager as the primary logging facility.

--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,15 @@
 %%% -*- mode: erlang -*-
 
+%% Require OTP version R13B04, R14, or R15
+{require_otp_vsn, "R13B04|R14|R15"}.
+
+%% Depends
+{deps_dir, "../"}.
+{deps, [{lager, ".*"}]}.
+
 %% Erlang compiler options
 {erl_opts, [debug_info, warnings_as_errors
+            , {parse_transform, lager_transform}
             , {i, "../gmt_util/include/"}
            ]}.
 
